# demo-django-celery-results

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  server.env  tox.ini
.github/workflows/: main.yml
app/: admin.py  apps.py  models.py  signals.py  tasks.py
app/management/commands/: trigger_task.py
app/migrations/: 0001_initial.py  0002_auto_20191212_0958.py
example/: celery.py  settings.py
